--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -27,24 +27,78 @@
     font-family: Inter;
     font-weight: 700;
     font-size: 16px;
-}
-
-.attendance-detail-row,
-.comment-row {
+    margin-top: 30px;
 }
 
 .attendance-detail-row {
     border-bottom: 2px solid #e1e1e1;
 }
 
+.name {
+    padding: 0 40px;
+}
+
+.year {
+    margin: 0 70px 0 20px;
+    display: inline-block;
+}
+
+.month-day {
+    margin: 0 20px 0 60px;
+    display: inline-block;
+}
+
 td {
-    text-align: center;
-    padding: 15px 0;
+    text-align: left;
+    padding: 15px 20px;
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 16px;
+    color: #000000;
 }
 
 th {
-    padding: 15px 0;
-    width: 150px;
+    text-align: left;
+    padding: 20px 50px;
+}
+
+.start-time-input,
+.end-time-input {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    height: 25px;
+    width: 100px;
+    padding: 8px 25px;
+    background-color: #ffffff;
+    position: relative;
+}
+
+.start-time-input {
+    margin-right: 30px;
+}
+
+.end-time-input {
+    margin-left: 30px;
+}
+
+.comment-input {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    height: 60px;
+    padding: 8px 10px;
+    background-color: #ffffff;
+    width: 55%;
+}
+
+.attendance-detail-form {
+    display: flex;
+    flex-direction: column;
 }
 
 .submit-button {
@@ -52,9 +106,10 @@ th {
     width: 120px;
     font-family: Inter;
     font-weight: 700;
-    font-size: 15px;
+    font-size: 18px;
     color: #ffffff;
     background-color: #000000;
     border-radius: 5px;
-    padding: 10px 0;
+    padding: 5px 0;
+    align-self: flex-end;
 }
